[metadata]
name = ascii_progress
version = attr: ascii_progress.__version__
description = Module containing ASCII progress indicators
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
author = Eric Wolf
author_email = robo-eric@gmx.de
maintainer = Eric Wolf
maintainer_email = robo-eric@gmx.de
url = https://github.com/Deric-W/ascii-progress
classifiers = 
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Environment :: Console
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Terminals
    Topic :: Utilities
    Typing :: Typed
    License :: OSI Approved :: MIT License

[options]
packages = ascii_progress
python_requires = >=3.5.4

[options.package_data]
ascii_progress = py.typed

[coverage:run]
source = ascii_progress
omit = tests/*

[mypy]
disallow_redefinition = True
warn_unreachable = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
disallow_subclassing_any = True
ignore_missing_imports = True
no_implicit_reexport = True
check_untyped_defs = True
disallow_untyped_defs = True
no_implicit_optional = True